unpackaged/main/default/objects/ContentVersion/fields/dfsle__GeneratedFileFormat__c.field-meta.xml
<CustomField>
    <fullName>dfsle__GeneratedFileFormat__c</fullName>
    <label>Generated File Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word</fullName>
                <default>true</default>
                <label>Word</label>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>