unpackaged/main/default/objects/ContentVersion/fields/dfsle__GeneratedFileName__c.field-meta.xml
<CustomField>
    <fullName>dfsle__GeneratedFileName__c</fullName>
    <label>Generated File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>