unpackaged/main/default/objects/ContentVersion/fields/dfsle__Rule__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Rule__c</fullName>
    <description>JSON mapping for storing Document Generation rule helpful in implementing Conditional Template
        generation.</description>
    <label>Rule</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>