unpackaged/main/default/objects/ContentVersion/fields/icatp__Hash__c.field-meta.xml
<CustomField>
    <fullName>icatp__Hash__c</fullName>
    <description>For use with File Slayer, used to store a hash representation of this file.</description>
    <inlineHelpText>For use with File Slayer, used to store a hash representation of this file.</inlineHelpText>
    <label>File Slayer Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>