unpackaged/main/default/objects/ContentVersion/fields/icatp__Signature_Slayer_Ignore__c.field-meta.xml
<CustomField>
    <fullName>icatp__Signature_Slayer_Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this file will not appear on the File Slayer Lightning App</description>
    <label>File Slayer Ignore</label>
    <type>Checkbox</type>
</CustomField>