unpackaged/main/default/objects/ContentVersion/fields/icatp__Slaybot_Assessment__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slaybot_Assessment__c</fullName>
    <description>File Slayer Slaybot Assessment</description>
    <label>Slaybot Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Slay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>