unpackaged/main/default/objects/ContentVersion/fields/icatp__Slaybot_Slay_Confidence__c.field-meta.xml
<CustomField>
    <fullName>icatp__Slaybot_Slay_Confidence__c</fullName>
    <description>Slaybot Slay Confidence Percentage</description>
    <label>Slaybot Slay Confidence</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>