unpackaged/main/default/objects/ContentVersion/fields/LEXMAGICMOVER__LegacyNoteConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
    <description>The created Date of the Legacy Note Converted</description>
    <label>LegacyNoteConvertedDate</label>
    <type>Date</type>
</CustomField>