unpackaged/main/default/objects/ContentVersion/fields/LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDateTime__c</fullName>
    <label>LegacyNoteConvertedLastModifiedDateTime</label>
    <type>DateTime</type>
</CustomField>