unpackaged/main/default/objects/ContentVersion/fields/LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
    <label>LegacyNoteConvertedOwnerId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>