unpackaged/main/default/objects/ContentVersion/fields/LEXMAGICMOVER__LegacyNoteConvertedParentId__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
    <label>LegacyNoteConvertedParentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>